plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.apache.ignite:ignite-spring:2.17.0'
	implementation 'org.apache.ignite:ignite-core:2.17.0'
	implementation 'org.apache.ignite:ignite-indexing:2.17.0'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'com.h2database:h2:1.4.197'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootRun') {
	jvmArgs = [
			'--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
			'--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
			'--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
			'--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
			'--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
			'--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
			'--add-opens=java.base/java.io=ALL-UNNAMED',
			'--add-opens=java.base/java.nio=ALL-UNNAMED',
			'--add-opens=java.base/java.util=ALL-UNNAMED',
			'--add-opens=java.base/java.lang=ALL-UNNAMED'
	]
}
